syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "validate/validate.proto";

message SFixed32 {
    sfixed32 none = 1;

    sfixed32 lt  = 2 [(validate.rules).sfixed32.lt  = 5]; // x <  5
    sfixed32 lte = 3 [(validate.rules).sfixed32.lte = 5]; // x <= 5
    sfixed32 gt  = 4 [(validate.rules).sfixed32.gt  = 5]; // x >  5
    sfixed32 gte = 5 [(validate.rules).sfixed32.gte = 5]; // x >= 5

    sfixed32 lt_gt   = 6 [(validate.rules).sfixed32 = {gt:  10, lt:  15}]; // x >  gt && x <  lt
    sfixed32 lt_gte  = 7 [(validate.rules).sfixed32 = {gte: 10, lt:  15}]; // x >= gte && x <  lt
    sfixed32 lte_gt  = 8 [(validate.rules).sfixed32 = {gt:  10, lte: 15}]; // x >  gt && x <= lte
    sfixed32 lte_gte = 9 [(validate.rules).sfixed32 = {gte: 10, lte: 15}]; // x >= gte && x <= lte

    sfixed32 lt_gt_inv   = 10 [(validate.rules).sfixed32 = {lt:  20, gt:  25}]; // x <  lt || x >  gt
    sfixed32 lt_gte_inv  = 11 [(validate.rules).sfixed32 = {lt:  20, gte: 25}]; // x <  lt || x >= gte
    sfixed32 lte_gt_inv  = 12 [(validate.rules).sfixed32 = {lte: 20, gt:  25}]; // x <= lte || x >  gt
    sfixed32 lte_gte_inv = 13 [(validate.rules).sfixed32 = {lte: 20, gte: 25}]; // x <= lte || x >= gte

    sfixed32 in     = 14 [(validate.rules).sfixed32 = {in: [30, 35]}];
    sfixed32 not_in = 15 [(validate.rules).sfixed32 = {not_in: [40, 45]}];

    sfixed32 const = 16 [(validate.rules).sfixed32.const = 50];
}
